# mrCUDA

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
dependencies/rCUDA/: ChangeLog.txt  LICENSE.txt
dependencies/rCUDA/framework/: rCUDAServer
dependencies/rCUDA/framework/rCUDAd/: getGPUNo  rCUDAd
dependencies/rCUDA/framework/rCUDAl/: libcublas.so.6  libcuda.so.1  libcudart.so.6.5  libcufft.so.6  libcufft.so.6.5  libcurand.so.6  libcusparse.so.6
include/: comm.h  common.h  mrcuda.h  record.h
libs/rCUDA/: ChangeLog.txt  LICENSE.txt  contents.txt
libs/rCUDA/framework/: rCUDAExec  rCUDAServer
libs/rCUDA/framework/rCUDAd/: getGPUNo  rCUDAd
libs/rCUDA/framework/rCUDAl/: libcudart.so.5  libcudart.so.5.0
libs/rCUDA/util/: rCUDA_util.h
prog/: func-list.txt
results/: memcpybw-memsync.out  memcpybw-mhelper.out  nullker-mhelper.out
scripts/: Makefile.am  Makefile.in  mrCUDAExec  mrcudaexec.py.template
scripts/plotters/: overhead.py
src/: Makefile  Makefile.am  Makefile.in  comm.c  comm.h  common.h  cudart.c  cudart.cu  datatypes.h  intercomm.c  intercomm.h  intercomm_interface.c  intercomm_interface.h  intercomm_mem.c  intercomm_mem.h  interface.c  libcudart.so.5.0  mhelper.c  mrcuda.c  mrcuda.h  record.c  record.h  skeleton.c
test/: hello  hello.cu  matmul_par.cu
tests/: Makefile.am  Makefile.in  check_comm.c  check_record.c
tests/progs/: benchmark.memcpybw.sh  benchmark.nullker.cudamemcpy.sh  cudamemcpy.cu  gpuaddr.cu  hellomul.cu  matmul_mul.cu  memcpybw.cu  multigpuaddr.cu  nullker.cu  thread_dev.cu
